Update: Professional EmailJS templates and form validation

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Abrada-Biotech | Advanced Waste-to-Energy Engineering</title>
@@ -15,6 +20,14 @@
       content="Leading experts in 24-hour anaerobic digestion, odorless bio-digesters, and biogas energy systems. Certified engineering by Abraham Ada."
     />
 
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Abrada-Biotech Engineering" />
+    <meta
+      property="og:description"
+      content="Sustainable waste management and biogas energy solutions."
+    />
+    <meta property="og:image" content="/apple-touch-icon.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,6 +39,7 @@
       body {
         font-family: "Inter", sans-serif;
         scroll-behavior: smooth;
+        margin: 0;
       }
     </style>
   </head>
